blade/bookinfo/overlay/gedemo/4.1.secure.upstream-tls/bookinfo-http-redirect-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: bookinfo-http-redirect
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - bookinfo.jad.solo.io
    routes:
    - matchers:
      - prefix: /
      redirectAction:
        hostRedirect: bookinfo.jad.solo.io
        httpsRedirect: true
